<resources>
  <string name="app_name">V2EX</string>

  <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

  <string name="title_activity_topic_image">TopicImageActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>

  <string name="action_link">链接</string>
  <string name="action_refresh">刷新</string>
  <string name="action_reply">回复</string>
  <string name="action_search">搜索</string>
  <string name="action_settings">设置</string>
  <string name="action_sign_in">登录</string>
  <string name="action_sign_up"><u>注册</u></string>
  <string name="action_load_captcha">载入验证码</string>
  <string name="toast_load_captcha_failed">载入验证码失败！请下拉刷新</string>
  <string name="desc_add_reply">添加回复</string>
  <string name="desc_avatar">头像</string>
  <string name="desc_close_drawer">关闭导航栏</string>
  <string name="desc_open_drawer">打开导航栏</string>
  <string name="desc_topic_link">帖子链接</string>
  <string name="drawer_explore">浏览</string>
  <string name="error_field_required">必填项</string>
  <string name="menu_action_copy">复制内容</string>
  <string name="menu_action_ignore">隐藏评论</string>
  <string name="menu_action_reply">回复评论</string>
  <string name="menu_action_thank">感谢回复者</string>
  <string name="menu_title_comment">评论选项</string>
  <string name="pref_category_general">基本</string>
  <string name="pref_category_user">用户</string>
  <string name="pref_log_out">登出</string>
  <string name="pref_sign_in">登录</string>
  <string name="prompt_account">账户</string>
  <string name="prompt_captcha">验证码</string>
  <string name="prompt_password">密码</string>
  <string name="title_activity_login">登录</string>
  <string name="title_activity_settings">设置</string>
  <string name="title_fragment_nodes">节点</string>
  <string name="toast_copied">已复制</string>
  <string name="toast_login_success">欢迎回来，%s！</string>
  <string name="toast_sending">发送中…</string>
  <string name="toast_cancel_failed">取消失败！</string>
  <string name="action_cancel">取消</string>
  <string name="toast_reply_saved_as_draft">评论已保存为草稿</string>
  <string name="drawer_notifications">通知</string>
  <string name="action_thank">感谢</string>
  <string name="action_ignore">忽略</string>
  <string name="action_share">分享</string>
  <string name="toast_daily_award_received">每日登录奖励已领取</string>
  <string name="tv_daily_bonus">每日奖励</string>
  <string name="tv_balance">当前账户余额</string>
  <string name="toast_connection_exception">网络连接失败…</string>
  <string name="toast_need_sign_in">请先登录！</string>
  <string name="toast_remote_exception">服务器错误，请稍候再试！</string>
  <string name="pref_title_always_load_image">总是显示图片</string>
  <string name="pref_summary_load_image_on_mobile_network">在使用移动网络时，载入主题或回复中的图片</string>
  <string name="toast_has_sign_out">账户已登出！</string>
  <string name="notification_fav_topic">收藏了你的主题</string>
  <string name="notification_reply_comment">回复了你的评论</string>
  <string name="notification_reply_topic">回复了你的主题</string>
  <string name="notification_thank_comment">感谢了你的评论</string>
  <string name="notification_thank_topic">感谢了你的主题</string>
  <string name="notification_unknown">未知操作</string>
  <string name="title_fragment_notifications">提醒</string>
  <string name="drawer_unread_notifications">未读提醒</string>
  <string name="ntf_desc_from_v2ex">来自 V2EX</string>
  <string name="ntf_title_new_notifications">新提醒</string>
  <string name="title_fragment_favorite">收藏</string>
  <string name="drawer_about">关于</string>
  <string name="title_activity_loading">载入中</string>
  <string name="toast_app_version">版本：%s</string>
  <string name="toast_please_wait">请稍等…</string>
  <string name="title_postscript">附言 %d</string>
  <string name="toast_topic_ignored">已忽略主题！</string>
  <string name="action_fav">收藏</string>
  <string name="toast_can_not_found_comments_of_the_author">找不到 %s 的评论！</string>
  <string name="pref_long_press_to_sort">长按项目进行排序</string>
  <string name="pref_title_tab_list">自定义分类显示</string>
  <string name="toast_parse_failed">解析失败！</string>
  <string name="pref_receive_notifications">接收通知消息</string>
  <string name="pref_summary_receive_notifications">通过 FCM 接收消息提醒</string>
  <string name="toast_register_device_failed">注册设备失败！</string>
  <string name="toast_unregister_device_failed">注销设备失败！</string>
  <string name="toast_check_google_play_services_failed">Google Play services 不可用。\n 错误代码：%s</string>
  <string name="action_discard">丢弃</string>
  <string name="action_new_topic">新主题</string>
  <string name="action_post">发表</string>
  <string name="dest_load_topic_from_draft">你想载入草稿吗？</string>
  <string name="hint_topic_body">如果标题已经能够表明意思，则此处可留空</string>
  <string name="hint_topic_subject">标题</string>
  <string name="toast_post_failed">发表失败</string>
  <string name="toast_topic_saved_as_draft">主题已保存为草稿</string>
  <string name="tv_selected_node"><![CDATA[已选择节点：<u>%s</u>]]></string>
  <string name="title_load_topic_from_draft">载入草稿</string>
  <string name="title_new_topic">新主题</string>
  <string name="action_edit">编辑</string>
  <string name="action_load">载入</string>
  <string name="title_select_node">选择节点</string>
  <string name="toast_activity_not_found">打开应用失败！</string>
  <string name="toast_topic_not_found">主题未找到！</string>
  <string name="toast_access_denied">拒绝访问，请稍候再试！</string>
  <string name="pref_title_always_show_reply_form">总是显示回复框</string>
  <string name="drawer_feedback">反馈</string>
  <string name="toast_email_app_not_found">找不到邮件应用！</string>
  <string name="action_upload_image">上传图片</string>
  <string name="action_back">返回</string>
  <string name="desc_clear_query">清除查询</string>
  <string name="pref_enable_undo">启用撤销操作</string>
  <string name="pref_summary_enable_undo">推迟操作请求，比如评论和点赞</string>
  <string name="title_fragment_topics">主题</string>
  <string name="toast_jump_to_last_read_pos">跳到最后阅读位置</string>
  <string name="pref_summary_force_touch">重压来快速预览主题</string>
  <string name="pref_title_force_touch">2.5D Touch（实验性）</string>
  <string name="desc_google_sign_in">通过 Google 登录</string>
  <string name="toast_sign_in_failed">登录失败！</string>
  <string name="pref_summary_content_selectable">使主题内容可选择，在部分设备上会导致崩溃</string>
  <string name="pref_title_content_selectable">可选择内容</string>
  <string name="action_update">更新应用</string>
  <string name="ntf_title_app_update">应用更新</string>
  <string name="ntf_desc_new_version_of_app">V2EX 发布新版本啦</string>
  <string name="toast_unsupported_url">不支持的链接！</string>
  <string name="action_reset_password">重置密码</string>
  <string name="pref_title_user_info">用户信息</string>
  <string name="pref_version">版本</string>
  <string name="error_invalid_auth_code">验证码无效</string>
  <string name="title_two_factor_auth">两步验证</string>
  <string name="toast_node_not_found">节点未找到！</string>
  <string name="toast_access_restricted">访问受限！请在网页版验证手机号。</string>
  <string name="login_buttom_text">创意工作者们的社区\nWorld is powered by solitude</string>
</resources>
