<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/main_dest"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="浏览" />
    <item
        android:id="@+id/nodeList_dest"
        android:icon="@drawable/ic_menu_nodes_black_24dp"
        android:title="节点" />
    <item
        android:id="@+id/nav_test_dest"
        android:icon="@drawable/ic_menu_manage"
        android:title="Tools" />
  </group>
  <group
      android:id="@+id/secondary"
      android:checkableBehavior="none"
      android:menuCategory="secondary">
    <item
        android:id="@+id/settings_dest"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/drawer_update"
        android:icon="@drawable/ic_get_app_black_24dp"
        android:title="@string/action_update"
        android:visible="false" />
    <item
        android:id="@+id/drawer_feedback"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/drawer_feedback" />
    <item
        android:id="@+id/history_dest"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/drawer_history" />
  </group>

</menu>
